proyektga normalniy readme yozib chiqdim